# gift_list

./: .gitignore  README.md  start
backend/: Cargo.toml  Rocket.toml
backend/src/: main.rs  user.rs
frontend/: index.html
frontend/src/: login.rs  main.rs
frontend/static/: main.css
schema/: users.txt
server/: Cargo.toml  Rocket.toml  Shuttle.toml  login.html
server/src/: main.rs  user.rs
ui/: Cargo.toml  Trunk.toml  index.html
ui/src/: login.rs  main.rs  sidebar.rs
ui/src/components/atoms/: mod.rs  side_button.rs  submit_button.rs  textbox.rs
ui/src/components/molecules/: buttons.rs  mod.rs  user.rs
ui/src/components/organisms/: groups.rs  list.rs  login.rs  mod.rs  register.rs  sidebar.rs  user.rs
ui/static/: main.css
