[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
rocket = "0.5.0"

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["sqlx_sqlite"]

[default.databases.sqlite_logs]
url = "../gift_list.db"
