[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.11.0"
gloo-net = { version = "0.5.0", features = ["json"] }
gloo-utils = "0.2.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-cookies = "0.2.1"
web-sys = { version = "0.3.69", features = ["HtmlInputElement"] }
yew = { version = "0.21.0", features = ["csr"] }
